[fix]: Fix endpoint mapping
