# restful/nodejs-backend/src/swagger/doc/swagger.json
@@ -461,6 +461,9 @@
     },
     "/user/update-password": {
       "patch": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
@@ -488,7 +491,12 @@
           "default": {
             "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   }
